# technology-examples

./: README.md
coroutines/: pom.xml
coroutines/src/main/java/: Main.kt
coroutines/src/main/java/coroutines/: TestCoroutines.kt
coroutines/src/main/java/entities/: PeopleGroup.kt  Restaurant.kt  Table.kt
dynamodb/: docker-compose.yml  pyproject.toml
dynamodb/src/beer_rater_api/: __main__.py
dynamodb/src/beer_rater_api/config/: dynamo_config.py
dynamodb/src/beer_rater_api/models/: model.py
dynamodb/src/beer_rater_api/repos/: beer_aggregate.py  beer_item.py  beer_type_aggregate.py  common.py  user_score.py
dynamodb/src/beer_rater_api/services/: main.py
hibernate/: build.gradle.kts  docker-compose.yml  settings.gradle.kts
hibernate/src/main/resources/: application.yml
interview-questions/: build.gradle.kts  settings.gradle.kts
interview-questions/sql/: docker-compose.yml  init.sql  task.sql
interview-questions/transfer-money/transfer-money-rest/: LICENSE  pom.xml
kafka/: build.gradle.kts  docker-compose.yml
kafka/src/main/resources/: application.yml
ksql/: build.gradle.kts  docker-compose.yml
nginx/example-router/: docker-compose.yml  nginx.conf
nginx/router/: docker-compose.yml  nginx.conf
nginx/router/server/: Dockerfile  server.sh
nginx/router/server/server1/: server.py
nginx/static/: docker-compose.yml  htpasswd  nginx.conf
nginx/static/root/: index.html
nginx/static/root/js/: main.js
s3/: build.gradle.kts  docker-compose.yaml
s3/src/main/resources/: application.yml
traefic/: docker-compose.yml
(+61 files in other folders)
