[tool.poetry]
name = "beer-rater"
version = "0.1.0"
description = ""
authors = ["Daniil Roman <daniil.roman@lightspeedhq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.84"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

